--- a/saitae-web/src/main/webapp/WEB-INF/web.xml
+++ b/saitae-web/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,9 @@
         <param-value>Development</param-value>
     </context-param>
     <context-param>
+        <description>luna-pink</description>
         <param-name>primefaces.THEME</param-name>
-        <param-value>cupertino</param-value>
+        <param-value>flick</param-value>
     </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
