--- a/saitae-web/src/main/webapp/WEB-INF/web.xml
+++ b/saitae-web/src/main/webapp/WEB-INF/web.xml
@@ -10,12 +10,11 @@
     <context-param>
         <description>luna-pink flick south-street</description>
         <param-name>primefaces.THEME</param-name>
-        <param-value>flick</param-value>
+        <param-value>luna-pink</param-value>
     </context-param>
     <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
-        <param-value>true</param-value>
-        
+        <param-value>true</param-value>        
     </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
