--- a/saitae-web/src/main/webapp/WEB-INF/web.xml
+++ b/saitae-web/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,14 @@
         <mime-type>application/font-woff2</mime-type>
     </mime-mapping>
     <mime-mapping>
+        <extension>woff</extension>
+        <mime-type>application/font-woff</mime-type>
+    </mime-mapping>
+    <mime-mapping>
+        <extension>eot</extension>
+        <mime-type>application/font-eot</mime-type>
+    </mime-mapping>
+    <mime-mapping>
         <extension>ttf</extension>
         <mime-type>application/font-ttf</mime-type>
     </mime-mapping>
