--- a/saitae-web/pom.xml
+++ b/saitae-web/pom.xml
@@ -72,6 +72,16 @@
             <artifactId>omnifaces</artifactId>
             <version>3.3</version>
         </dependency>
+        <dependency>
+            <groupId>net.glxn</groupId>
+            <artifactId>qrgen</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.barcode4j</groupId>
+            <artifactId>barcode4j-light</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
