--- a/saitae-web/src/main/webapp/WEB-INF/web.xml
+++ b/saitae-web/src/main/webapp/WEB-INF/web.xml
@@ -62,7 +62,7 @@
     <filter>
         <!-- The CORS filter with parameters -->
         <filter-name>CORS</filter-name>
-        <filter-class>net.delsas.saitae.aux.corsonf</filter-class>
+        <filter-class>net.delsas.saitae.ax.corsonf</filter-class>
         <!-- Note: All parameters are options, if omitted the CORS 
            Filter will fall back to the respective default values.
         -->
@@ -105,7 +105,7 @@
     </filter>
     <filter>
         <filter-name>corsonf</filter-name>
-        <filter-class>net.delsas.saitae.aux.corsonf</filter-class>
+        <filter-class>net.delsas.saitae.ax.corsonf</filter-class>
     </filter>
     <error-page>
         <exception-type>org.jboss.weld.contexts.ContextNotActiveException</exception-type>
