--- a/saitae-web/src/main/webapp/WEB-INF/web.xml
+++ b/saitae-web/src/main/webapp/WEB-INF/web.xml
@@ -28,9 +28,9 @@
         <mime-type>application/font-ttf</mime-type>
     </mime-mapping>
     <context-param>
-        <description>flick south-street luna-[pink, amber, green]</description>
+        <description>flick south-street luna-[pink, amber, green, blue]</description>
         <param-name>primefaces.THEME</param-name>
-        <param-value>luna-pink</param-value>
+        <param-value>nova-colored</param-value>
     </context-param>
     <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
@@ -113,6 +113,6 @@
     </error-page>
     <error-page>
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
-        <location>/index.intex</location>
+        <location>/</location>
     </error-page>
 </web-app>
