--- a/saitae-web/pom.xml
+++ b/saitae-web/pom.xml
@@ -56,7 +56,8 @@
         <dependency>
             <groupId>org.omnifaces</groupId>
             <artifactId>omnifaces</artifactId>
-            <version>2.7.3</version>
+            <version>2.7.1</version>
+            <scope>compile</scope>
         </dependency>
         
         <dependency>
