--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,25 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>saitae</name>
-<modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <showDeprecation>false</showDeprecation>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <modules>
     <module>saitae-ear</module>
   <module>saitae-web</module>
   <module>saitae-ejb</module>
   </modules>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
