--- a/saitae-web/src/main/webapp/WEB-INF/web.xml
+++ b/saitae-web/src/main/webapp/WEB-INF/web.xml
@@ -28,9 +28,8 @@
         <mime-type>application/font-ttf</mime-type>
     </mime-mapping>
     <context-param>
-        <description>flick south-street luna-[pink, amber, green, blue]</description>
         <param-name>primefaces.THEME</param-name>
-        <param-value>luna-pink</param-value>
+        <param-value>#{themeControlller.tema}</param-value>
     </context-param>
     <context-param>
         <param-name>primefaces.FONT_AWESOME</param-name>
