--- a/saitae-web/pom.xml
+++ b/saitae-web/pom.xml
@@ -96,22 +96,24 @@
             <artifactId>itext</artifactId>
             <version>2.1.7</version>
         </dependency>
-        
-        <!-- <dependency>
-                    <groupId>e-iceblue</groupId>
-                    <artifactId>spire.pdf</artifactId>
-                    <version>2.2.0</version>
-                </dependency>
-        -->
+        <!--  <dependency>
+            <groupId>e-iceblue</groupId>
+            <artifactId>spire.pdf</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>e-iceblue</groupId>
+            <artifactId>spire.xls.free</artifactId>
+            <version>2.2.0</version>
+        </dependency>-->
     </dependencies>
     <!-- <repositories>
-            <repository>
-                <id>com.e-iceblue</id>
-                <name>e-iceblue</name>
-                <url>http://repo.e-iceblue.com/nexus/content/groups/public/</url>
-            </repository>
-        </repositories>
-    -->
+        <repository>
+            <id>com.e-iceblue</id>
+            <name>e-iceblue</name>
+            <url>http://repo.e-iceblue.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>-->
     <build>
         <plugins>
             <plugin>
