--- a/saitae-ear/pom.xml
+++ b/saitae-ear/pom.xml
@@ -4,12 +4,12 @@
     <parent>
     <artifactId>saitae</artifactId>
     <groupId>net.delsas</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1</version>
   </parent>
 
     <groupId>net.delsas</groupId>
     <artifactId>saitae-ear</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1</version>
     <packaging>ear</packaging>
 
     <name>saitae-ear</name>
@@ -45,13 +45,13 @@
         <dependency>
             <groupId>net.delsas</groupId>
             <artifactId>saitae-ejb</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1</version>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>net.delsas</groupId>
             <artifactId>saitae-web</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1</version>
             <type>war</type>
         </dependency>
     </dependencies>
