--- a/saitae-ejb/pom.xml
+++ b/saitae-ejb/pom.xml
@@ -4,12 +4,12 @@
     <parent>
     <artifactId>saitae</artifactId>
     <groupId>net.delsas</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1</version>
   </parent>
 
     <groupId>net.delsas</groupId>
     <artifactId>saitae-ejb</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1</version>
     <packaging>ejb</packaging>
 
     <name>saitae-ejb</name>
